--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "name": "nodejs_001",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --inspect src/index.js",
+    "watch": "sass --watch src/resources/scss/ --output src/public/css/app.css",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bootstrap": "^5.3.0-alpha1",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.1",
+    "morgan": "^1.10.0",
+    "patch-package": "^6.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.21",
+    "sass": "^1.58.3",
+    "script": "^0.1.4"
   }
 }
