--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
-    "watch": "sass --watch src/resources/scss/ --output src/public/css/app.css",
+    "watch": "sass --watch src/resources/scss/ src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "patch-package"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
     "morgan": "^1.10.0",
